//
//  AccessibilityIdentifiers.swift
//  PlantingMind
//
//  Created by 최은주 on 4/17/24.
//

import Foundation

enum AccessibilityIdentifiers: String {
    // Calendar
    case previousMonthButton
    case nextMonthButton
    case settingsButton
    case monthPickerButton
    case calendarGridView
    
    // MonthPicker
    case yearPicker
    case monthPicker
    case doneButton
}
